terminada para 3pre entrega

--- a/css/style.css
+++ b/css/style.css
@@ -1,279 +1,339 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-a{
-    text-decoration: none;
-}
-footer a{
-    color: white;
-}
-.navbar-brand{
-    color: white;
-    font-style: italic;
-    font-family: serif;
-    font-weight: 600;
-}
-/* -----INDEX------ */
-/* header */
-header{
-    background-color:steelblue ;
-    display: grid;
-    flex-direction: row;
-    justify-content: space-between;
-    align-content: center;
-    grid-template-columns: repeat(4, 1fr);
-}
-header h1{
+@charset "UTF-8";
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
+
+a {
+  text-decoration: none; }
+
+header {
+  background-color: steelblue;
+  display: grid;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: center;
+  grid-template-columns: repeat(4, 1fr); }
+  header .logopetite {
+    width: 5rem; }
+  header h1 {
     color: white;
     display: inline-block;
-    font-size: 1,5rem;
-}
-header ul{
+    font-size: 1,5rem; }
+  header ul {
     list-style: none;
     display: flex;
-    gap: 20px;
-    
-    
-}
-.float{
-	position:fixed;
-	width:60px;
-	height:60px;
-	bottom:40px;
-	right:40px;
-	background-color:#25d366;
-	color:#FFF;
-	border-radius:50px;
-	text-align:center;
-    font-size:30px;
-	box-shadow: 2px 2px 3px #999;
-    z-index:100;
-}
-.float:hover {
-	text-decoration: none;
-	color: #25d366;
-    background-color:#fff;
-}
+    gap: 20px; }
+    header ul li {
+      color: white;
+      width: fit-content;
+      padding: 10px;
+      font-size: 1rem; }
+  header a {
+    text-decoration: none;
+    color: black; }
 
-.my-float{
-	margin-top:16px;
-}
-.btncontact{
-    background-color: steelblue;
-    border-radius: 10px;
-}
+.navbar .navbar-brand {
+  color: white;
+  font-style: italic;
+  font-family: serif;
+  font-weight: 600; }
 
-
-header ul li{
-    color: white;
-    width: fit-content;
-    padding: 10px;
-    font-size: 1rem;
-}
-.logopetite{
-    width: 4rem;
-}
-
-/* ------------Comienzo main------------ */
-.carrusel{
-    display: flex;
-}
-.slide{
-    margin-top: 10px;
-    display: flex;
-    justify-content: center;
-}
-.slide img{
-    height: 65vh;
-    justify-content: center;
-}
-.caja1{
-    background-image: url(../img/breakfast.jpg);
-    background-size: cover;
+.caja {
+  padding: 20px;
+  width: auto;
+  height: 500px; }
+  .caja__textoh {
+    color: aliceblue;
+    text-decoration: none;
+    text-shadow: 1px 1px  blue; }
+  .caja__encargo {
+    background-image: url(../img/imgchicas/breakfast.jpg);
+    text-shadow: 10px black;
+    background-size: contain;
     background-repeat: no-repeat;
-    background-position: center;
-    padding:100px;
-    text-align: center;
     background-attachment: fixed;
-}
-.container{
-    display: grid;
-    gap: 20px;
-}
-.card {
-	border-radius: 10px;
-	min-height: 200px;
-	font-weight: bold;
-	padding: 20px;
-	position: relative;
-	overflow: hidden;
-	background-size: cover;
-	background-position: center center;
-    
-}
-.textocard{
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.desayunodesktop{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-    place-content: center;
-}
-
-.card-img-overlay{
-    background-color: #9a9d9bc3;
-    text-align: center;
-    
-}
-.container-cardimg{
-
-    overflow: hidden;
-    position: relative;
-    margin: 20px;
+    background-position: top;
     border-radius: 20px;
     box-shadow: 5px 8px 12px black;
-    cursor: pointer;
-    transition: all 0.3s ease-in-out;
-
-}
-.container-cardimg:hover{
-    transform: scale(1.1);
-    box-shadow: 13px 15px 37px black;
-}
-.imgfin{
-    width: 100%;
-    height: 400px;
-    background-position: center;
-    background-repeat:space;
-}
-.btn-foot{
-    background-color:cadetblue;
-}
-.btn-new{
-    background-color: aliceblue;
-}
-.textofin{
-    font-size: larger;
-    font-style: italic;
-    font-family: serif;
-    color: white;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-shadow: 0 0 8px rgba(0, 0, 0, 0.8);
-}
-
-
-/* -----------FOOTER------------ */
-
-
-footer ul li{
-    list-style: none;
-    
-}
-.bg-footer{
-    background-color: navy;
-    color: white;
-}
-#insta{
-    width: 2rem;
-}
-#whatsapp{
-    width: 2rem;
-} */
-
-
-/* -------------page desayunos------------------- */
-.titulodesayuno{
-    text-align: center;
-    padding: 15px;
-    text-decoration:underline;
-    font-size: 2rem;
-}
-.contenedordesayuno{
-    padding-bottom: 20px;
     display: flex;
-    text-align: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content:space-evenly;
-    align-items: center;
-    align-content: center
-}
+    flex-direction: column;
+    justify-content: center; }
+  .caja__cualquieres {
+    margin-top: 25px;
+    border-radius: 20px;
+    background-color: rgba(6, 161, 233, 0.595);
+    box-shadow: 5px 8px 12px black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; }
+  .caja a {
+    text-decoration: none; }
 
-.descaja1{
-    background-image: url(../img/desayunos/desayunoaniversario.jpg);
-    background-size: cover;
-    width: 200px;
-    height: 200px;
-    border: solid 3px black;
-    font-size: 1rem;
-    background-position: bottom;
-}
+.carrusel {
+  display: flex; }
+  .carrusel__slide {
+    margin-top: 10px;
+    display: flex;
+    justify-content: center; }
+  .carrusel.slide img {
+    height: 65vh;
+    justify-content: center; }
 
-.descaja2{
-    background-image: url(../img/desayunos/desayunocumple.jpg);
+.vermas {
+  margin: 20px; }
+  .vermas .btn {
+    background-color: steelblue;
+    border-radius: 10px;
+    color: white; }
+
+footer {
+  background-color: navy;
+  color: white;
+  list-style: none;
+  margin-top: 20px; }
+  footer ul {
+    color: white;
+    list-style: none; }
+  footer .dropdown-toggle {
+    color: steelblue; }
+  footer .bi {
+    color: white; }
+  footer a {
+    color: white; }
+  footer .btn {
+    background-color: whitesmoke; }
+
+.card {
+  width: 1000%;
+  max-width: 1200px;
+  margin: auto;
+  padding: 30px 0;
+  display: grid;
+  grid-template-columns: 2fr 2fr;
+  gap: 20px;
+  place-content: center; }
+  .card__aniversario {
+    border-radius: 10px;
+    min-height: 300px;
+    font-weight: bold;
+    padding: 20px;
+    position: relative;
+    overflow: hidden;
+    background-size: cover;
+    background-position: center center; }
+  .card__cumpleaños {
+    border-radius: 10px;
+    min-height: 300px;
+    font-weight: bold;
+    padding: 20px;
+    position: relative;
+    overflow: hidden;
+    background-size: cover;
+    background-position: center center; }
+  .card__papa {
+    border-radius: 10px;
+    min-height: 300px;
+    font-weight: bold;
+    padding: 20px;
+    position: relative;
+    overflow: hidden;
+    background-size: cover;
+    background-position: center center; }
+  .card__mama {
+    border-radius: 10px;
+    min-height: 300px;
+    font-weight: bold;
+    padding: 20px;
+    position: relative;
+    overflow: hidden;
+    background-size: cover;
+    background-position: center center; }
+  .card__saludables {
+    border-radius: 10px;
+    min-height: 300px;
+    font-weight: bold;
+    padding: 20px;
+    position: relative;
+    overflow: hidden;
+    background-size: cover;
+    background-position: center center; }
+  .card__personalizados {
+    border-radius: 10px;
+    min-height: 300px;
+    font-weight: bold;
+    padding: 20px;
+    position: relative;
+    overflow: hidden;
+    background-size: cover;
+    background-position: center center; }
+
+.imgfin {
+  text-align: center;
+  background-image: url(../img/imgchicas/desaprincipal.jpeg);
+  color: white;
+  text-shadow: 3px 3px black;
+  display: grid;
+  align-items: center;
+  background-size: cover;
+  background-repeat: no-repeat; }
+  .imgfin .textofin {
+    display: flex;
+    justify-content: center;
+    justify-items: center; }
+
+.titulodesayuno {
+  padding: 15px;
+  text-decoration: underline;
+  font-size: 2rem; }
+
+.contenedordesayuno {
+  padding-bottom: 20px;
+  display: flex;
+  text-align: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  align-content: center; }
+  .contenedordesayuno .descaja1 {
+    background-image: url(../img/imgchicas/desayunoaniversario.jpg);
+    background-size: cover;
+    width: 200px;
+    height: 200px;
+    border: solid 3px black;
+    font-size: 1rem;
+    background-position: bottom; }
+  .contenedordesayuno .descaja2 {
+    background-image: url(../img/imgchicas/desayunocumple.jpg);
     background-size: cover;
     width: 200px;
     height: 200px;
     border: solid 3px black;
     font-size: 1rem;
     text-align: center;
-    background-position: bottom;
-}
-.descaja3{
-    background-image: url(../img/desayunos/desayunopadre.jpg);
+    background-position: bottom; }
+  .contenedordesayuno .descaja3 {
+    background-image: url(../img/imgchicas/desayunopadre.jpg);
     background-size: cover;
     width: 200px;
     height: 200px;
     border: solid 3px black;
     font-size: 1rem;
     text-align: center;
-    background-position: center;
-}
-.descaja4{
-    background-image: url(../img/desayunos/desayunomadre.jpg);
+    background-position: center; }
+  .contenedordesayuno .descaja4 {
+    background-image: url(../img/imgchicas/desayunomadre.jpg);
     background-size: cover;
     width: 200px;
     height: 200px;
     border: solid 3px black;
     font-size: 1rem;
-    text-align: center;
-}
-.descaja5{
-    background-image: url(../img/desayunos/personalizado.jpeg);
+    text-align: center; }
+  .contenedordesayuno .descaja5 {
+    background-image: url(../img/desayunos/desayunopersonalizado.jpeg);
     background-size: cover;
     width: 200px;
     height: 200px;
     border: solid 3px black;
     font-size: 1rem;
-    text-align: center;
-}
-.descaja6{
+    text-align: center; }
+  .contenedordesayuno .descaja6 {
     background-image: url(../img/desayunos/desayunomate.jpeg);
     background-size: cover;
     width: 200px;
     height: 200px;
     border: solid 3px black;
     font-size: 1rem;
-    text-align: center;
-}
-.descaja7{
-    background-image: url(../img/desayunos/desayunosaludable.jpg);
+    text-align: center; }
+  .contenedordesayuno .descaja7 {
+    background-image: url(../img/imgchicas/desayunosaludable.jpg);
     background-position: center;
     background-size: cover;
     width: 200px;
     height: 200px;
     border: solid 3px black;
     font-size: 1rem;
-    text-align: center;
-    ;
-}
+    text-align: center; }
+
+.bodycontact {
+  background-color: #807EFD; }
+  .bodycontact .tituloscontact {
+    color: white; }
+  .bodycontact .container1 {
+    display: flex;
+    background-color: #fff;
+    height: 750px;
+    width: 1000px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
+    margin: auto;
+    margin-top: 50px;
+    border-radius: 25px; }
+    .bodycontact .container1 .form {
+      padding: 30px 80px;
+      width: 50%;
+      display: flex;
+      flex-direction: column; }
+    .bodycontact .container1 .form h2 {
+      font-size: 45px;
+      color: #4844A9;
+      font-weight: 600;
+      margin-bottom: 25px; }
+    .bodycontact .container1 .form p {
+      font-size: 16px;
+      color: #969EAE;
+      margin-bottom: 25px; }
+    .bodycontact .container1 label {
+      font-size: 15px;
+      color: #969EAE;
+      margin-bottom: 15px; }
+    .bodycontact .container1 .box {
+      border: 0;
+      background-color: #f4f4fd;
+      padding: 15px;
+      border-radius: 25px;
+      margin-bottom: 25px;
+      outline: none; }
+    .bodycontact .container1 .submit {
+      background-color: #817ffe;
+      border: 0;
+      padding: 15px;
+      color: #fff;
+      font-size: 16px;
+      border-radius: 25px;
+      width: 250px;
+      margin-top: 25px;
+      box-shadow: 0 0 20px rgba(201, 199, 253, 0.5); }
+    .bodycontact .container1 .info {
+      padding: 50px; }
+    .bodycontact .container1 .img-1 {
+      width: 350px;
+      margin-bottom: 75px; }
+    .bodycontact .container1 .location {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 60px; }
+    .bodycontact .container1 .icons {
+      display: flex;
+      margin-bottom: 31px; }
+    .bodycontact .container1 .icons img {
+      width: 35px;
+      margin-right: 10px; }
+    .bodycontact .container1 .icons p {
+      font-size: 14px;
+      color: #969EAE; }
+  @media (max-width: 990px) {
+    .bodycontact .container1 {
+      width: 350px;
+      height: 800px;
+      margin-top: 50px; }
+    .bodycontact .info {
+      display: none; }
+    .bodycontact .form {
+      width: 100%;
+      padding: 30px; } }
+
+/*# sourceMappingURL=style.css.map */
